<resources>
    <string name="app_name">Seizure Detection App</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_Age">Enter age</string>
    <string name="Input_countdown_time">Time in Seconds</string>
    <string name="Input_emergency_contacts">(___)-___-____</string>
    <string name="Add_Contact">Add Emergency Contacts</string>
    <string name="user_email">Email Address</string>
    <string name="user_password">Password</string>
    <string name="login_button">Login</string>
    <string name="Add_Seizure_Start_Date">Add Seizure Start Date</string>
    <string-array name="Contact_Preference">
        <item>text message</item>
        <item>email</item>
    </string-array>
    <string-array name="sexInput">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="seizureStartMonth">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
    <string-array name="seizureTypeInput">
        <item>tonic-clonic</item>
        <item>absence</item>
        <item>atonic</item>
        <item>Focal Onset Aware</item>
        <item>Focal Onset Impaired Awareness</item>
        <item>Unknown Onset</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="request_help">Request Help</string>
    <string name="home">Home</string>
    <string name="realtime">Realtime</string>
    <string name="prefContactMethodTextMessage">Text Message</string>
    <string name="prefContactMethodEmail">Email</string>
    <string name="journalSortDate">Date</string>
    <string name="journalSortDuration">Duration</string>
    <string name="unknown_device">Unknown Device</string>

    <string name="menu_filter">Filter</string>
    <string name="menu_filter_uuid">Only devices advertising LBS UUID</string>
    <string name="menu_filter_nearby">Only nearby devices</string>

    <string name="action_grant_permission">Grant permission</string>
    <string name="action_settings">Settings</string>
    <string name="action_enable">Enable</string>

    <string name="location_permission_title">LOCATION PERMISSION REQUIRED</string>
    <string name="location_permission_info">From Android 6.0 until 11 the application
        requires Location permission in order to scan for Bluetooth Low Energy devices. This
        is because Bluetooth LE beacons, for example iBeacons or Eddystone, may be used to
        determine the phone\'s and user\'s location.\n\n<b>nRF Blinky</b> will not use
		this information in any way.\n\nOn Android 12 and above, a new Bluetooth Scan permission
		is requested with a flag that prevents using scanning for estimating location, but on this system
        version, unfortunately, no scan results are returned without location enabled.</string>

    <string name="bluetooth_permission_title">BLUETOOTH PERMISSIONS REQUIRED</string>
    <string name="bluetooth_permission_info">The app needs to scan and connect to\nBluetooth LE devices.</string>

    <string name="bluetooth_disabled_title">BLUETOOTH DISABLED</string>
    <string name="bluetooth_disabled_info">The Bluetooth adapter is turned off.\nClick the button
        below to enable it.</string>

    <string name="blinky_guide_title">CAN\'T SEE YOUR BLINKY?</string>
    <string name="blinky_guide_info">1. <b>Turn on</b> the device and is connect to
		a power source using a micro USB cable or a coin cell is plugged in.\n\n2. Make sure
        the application advertises LED Button Service (LBS), or change the filter in the menu.</string>
    <string name="blinky_guide_location_info">3. Location is turned off.\n\nLocation service is required
        in order to scan for Bluetooth LE devices. If you are sure your device is advertising and
        it doesn\'t show up here, click the button below to enable Location.</string>
    <string name="state_connecting">Connecting…</string>
    <string name="state_initializing">Initializing…</string>

    <string name="action_not_supported">Fix and try again</string>
    <string name="action_retry">Retry</string>

    <string name="turn_on">On</string>
    <string name="turn_off">Off</string>

    <string name="title_led_state">LED</string>
    <string name="title_button_state">Button</string>

    <string name="state">State</string>
    <string name="button_pressed">Pressed</string>
    <string name="button_released">Released</string>
    <string name="button_unknown">Unknown</string>

    <string name="led_summary">Toggle the switch to turn the LED 3 on or off.</string>
    <string name="button_summary">Press Button 1 on the dev kit.</string>

    <string name="not_supported_title">DEVICE NOT SUPPORTED</string>
    <string name="not_supported_info">1. The Blinky service hasn\'t been found on the device\'s
		attribute table.\n\n2. Make sure the DK is flashed with the correct firmware.\n\n3. If you
		used the DK with another firmware before, the old services might have been cached by
		the system.</string>

    <string name="timeout_title">CONNECTION TIMED OUT</string>
    <string name="timeout_info">Make sure your device is powered ON and in range.</string>
</resources>